# exportGlobalVariableData

./: .gitignore  CMakeLists.txt
src/: RedoBlHooks.hpp  Source.cpp
